@@ -2,8 +2,8 @@
 
 
 
-Previous version: 2.00-rc7  (03/08/2005)
-Current version:  2.00-rc8  (06/08/2005)
+Previous version: 2.00-rc8  (06/08/2005)
+Current version:  2.00		(22/08/2005)
 
 SubVersion (CVS) revision: $Id$
 
@@ -20,20 +20,20 @@ For the other link cables, no driver is needed.
 New capabilities:
 -----------------
 
-	- new I/O ports window which let view/modify HW registers
-	- TiEmu retains the state of dbg windows (open/closed)
+	- memory window: can dis-assemble at indirect address
 
 
 Improvements:
 -------------
 
-	- buffering grayscale planes to avoid blinking in double-buffered games (like Anton's F-Zero)
+	- use Titanium & TI92+ skin when available
+	- import V200 updates as HW2, not HW1 (and default TI-89/92+ updates to HW2)
 	
 		
 Bug fixes:
 ----------
 
-	- only first 32 bytes of ram_exec were restored from savestate
+	- large column in the I/O port view
 	
 
 Planned:
