@@ -363,6 +363,7 @@ Section "MainSection" SEC01
   File "..\..\..\..\TiEmu\share\tiemu\skins\ipaq_92.skn"
   File "..\..\..\..\TiEmu\share\tiemu\skins\ipaq_v200plt.skn"
   File "..\..\..\..\TiEmu\share\tiemu\skins\ti89.skn"
+  File "..\..\..\..\TiEmu\share\tiemu\skins\ti89t.skn"
   File "..\..\..\..\TiEmu\share\tiemu\skins\ti92.skn"
   File "..\..\..\..\TiEmu\share\tiemu\skins\v200plt.skn"
   File "..\..\..\..\TiEmu\share\tiemu\skins\ti89.map"
@@ -1918,6 +1919,7 @@ Section Uninstall
   Delete "$INSTDIR\share\tiemu\skins\ti89.map"
   Delete "$INSTDIR\share\tiemu\skins\v200plt.skn"
   Delete "$INSTDIR\share\tiemu\skins\ti92.skn"
+  Delete "$INSTDIR\share\tiemu\skins\ti89t.skn"
   Delete "$INSTDIR\share\tiemu\skins\ti89.skn"
   Delete "$INSTDIR\share\tiemu\skins\ipaq_v200plt.skn"
   Delete "$INSTDIR\share\tiemu\skins\ipaq_92.skn"
