@@ -16,6 +16,7 @@
   <property name="skip_pager_hint">False</property>
   <property name="type_hint">GDK_WINDOW_TYPE_HINT_NORMAL</property>
   <property name="gravity">GDK_GRAVITY_NORTH_WEST</property>
+  <property name="focus_on_map">True</property>
   <signal name="delete_event" handler="on_dbgmem_window_delete_event" last_modification_time="Mon, 07 Jun 2004 08:10:33 GMT"/>
   <signal name="window_state_event" handler="on_dbgmem_window_state_event" last_modification_time="Sun, 27 Feb 2005 08:31:10 GMT"/>
 
@@ -173,6 +174,7 @@
   <property name="skip_pager_hint">False</property>
   <property name="type_hint">GDK_WINDOW_TYPE_HINT_DIALOG</property>
   <property name="gravity">GDK_GRAVITY_NORTH_WEST</property>
+  <property name="focus_on_map">True</property>
   <property name="has_separator">True</property>
 
   <child internal-child="vbox">
@@ -259,6 +261,10 @@
 	      <property name="yalign">0.5</property>
 	      <property name="xpad">0</property>
 	      <property name="ypad">0</property>
+	      <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
+	      <property name="width_chars">-1</property>
+	      <property name="single_line_mode">False</property>
+	      <property name="angle">0</property>
 	    </widget>
 	    <packing>
 	      <property name="type">label_item</property>
@@ -298,7 +304,7 @@
   </child>
 
   <child>
-    <widget class="GtkMenuItem" id="separator1">
+    <widget class="GtkSeparatorMenuItem" id="separator1">
       <property name="visible">True</property>
     </widget>
   </child>
@@ -314,7 +320,7 @@
   </child>
 
   <child>
-    <widget class="GtkMenuItem" id="separator2">
+    <widget class="GtkSeparatorMenuItem" id="separator2">
       <property name="visible">True</property>
     </widget>
   </child>
@@ -322,9 +328,18 @@
   <child>
     <widget class="GtkMenuItem" id="dissassemble1">
       <property name="visible">True</property>
-      <property name="label" translatable="yes">_Dissassemble</property>
+      <property name="label" translatable="yes">_Dis-assemble</property>
       <property name="use_underline">True</property>
       <signal name="activate" handler="on_dissassemble1_activate" last_modification_time="Mon, 02 Aug 2004 14:40:43 GMT"/>
+    </widget>
+  </child>
+
+  <child>
+    <widget class="GtkMenuItem" id="dis-assemble_(indirect)1">
+      <property name="visible">True</property>
+      <property name="label" translatable="yes">Dis-assemble (indirect)</property>
+      <property name="use_underline">True</property>
+      <signal name="activate" handler="on_disassemble_indirect1_activate" last_modification_time="Sat, 20 Aug 2005 13:40:17 GMT"/>
     </widget>
   </child>
 </widget>
@@ -342,6 +357,7 @@
   <property name="skip_pager_hint">False</property>
   <property name="type_hint">GDK_WINDOW_TYPE_HINT_DIALOG</property>
   <property name="gravity">GDK_GRAVITY_NORTH_WEST</property>
+  <property name="focus_on_map">True</property>
   <property name="has_separator">True</property>
 
   <child internal-child="vbox">
@@ -425,6 +441,10 @@
 			  <property name="yalign">0.5</property>
 			  <property name="xpad">0</property>
 			  <property name="ypad">0</property>
+			  <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
+			  <property name="width_chars">-1</property>
+			  <property name="single_line_mode">False</property>
+			  <property name="angle">0</property>
 			</widget>
 			<packing>
 			  <property name="padding">0</property>
@@ -486,6 +506,10 @@
 		  <property name="yalign">0.5</property>
 		  <property name="xpad">0</property>
 		  <property name="ypad">0</property>
+		  <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
+		  <property name="width_chars">-1</property>
+		  <property name="single_line_mode">False</property>
+		  <property name="angle">0</property>
 		</widget>
 		<packing>
 		  <property name="padding">0</property>
@@ -536,6 +560,10 @@
 	      <property name="yalign">0.5</property>
 	      <property name="xpad">0</property>
 	      <property name="ypad">5</property>
+	      <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
+	      <property name="width_chars">-1</property>
+	      <property name="single_line_mode">False</property>
+	      <property name="angle">0</property>
 	    </widget>
 	    <packing>
 	      <property name="padding">0</property>
