@@ -135,7 +135,7 @@ void ti68k_register_set_ssp(uint32_t val)
 void ti68k_register_set_pc(uint32_t val)
 {
     m68k_setpc(val);
-    fill_prefetch_0 (); /* Force reloading the prefetch. */
+    fill_prefetch_slow (); /* Force reloading the prefetch. */
 
 #ifndef NO_GDB
     registers_changed ();
