@@ -29,6 +29,9 @@
 #  include <config.h>
 #endif				/*  */
 
+#ifdef __WIN32__
+#include <io.h>
+#endif
 #include <stdlib.h>
 #include <string.h>
 #include <gtk/gtk.h>
@@ -331,7 +334,15 @@ static int match_skin(int calc_type)
 	g_free(s);
 
 	if(!strcmp(skin_name, "ti92+") || !strcmp(skin_name, "ti89t"))
-		skin_name[4] = '\0';
+	{
+		gchar *path = g_strdup_printf("%s%s.skn", inst_paths.skin_dir, skin_name);
+
+		// fallbacks on standard skin if it can find an appropriate one
+		if(access(path, 0) == -1)
+			skin_name[4] = '\0';
+
+		g_free(path);
+	}
 
 #ifdef __IPAQ__
 	s = g_strconcat("ipaq_", skin_name, NULL);
